# Ethspec-Verify-draft-

./: .dockergignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  compliance-check.yml  release.yml
documents/: brics.txt
documents/consensus_spec/: ast_basic.json
src/: __init__.py
src/core/: __init__.py
src/core/entities/: __init__.py  behavioral_model.py  confidence_score.py  specification.py  verification_result.py
src/core/exceptions/: __init__.py  parsing_error.py  validation_error.py  verification_error.py
src/core/interfaces/: __init__.py  ast_parser.py  embedding_generator.py  knowledge_graph.py  llm_provider.py  report_generator.py  vector_store.py
src/core/use_cases/: __init__.py  extract_behavioral_model.py  generate_report.py  ingest_specification.py  verify_compliance.py
src/infrastructure/database/: client.py  collection.py  main.py  query_result.json  search.py
src/infrastructure/database/ingestion/: ingest.py  requirements.txt
src/infrastructure/database/query/: query.py  requirements.txt
src/infrastructure/database/services/: ingest.py  query.py
src/infrastructure/llm/: __init__.py  base_provider.py  gemini_provider.py
src/integration/: __init__.py
src/integration/cli/: __init__.py  main.py
src/integration/github-bot/: LICENSE  README.md  index.js  package-lock.json  package.json
src/layers/: __init__.py
src/layers/layer1_ast/: __init__.py  ast_parser.py  behavioral_extractor.py  cfg_generator.py  data_flow_analyzer.py  json_extractor.py  json_validator.py  sbt_transformer.py  semantic_scorer.py
src/layers/layer1_ast/prompts/: __init__.py  ast_generation.py
src/layers/layer2_rag/: __init__.py  context_assembler.py  document_parser.py  embedding_generator.py  knowledge_graph.py  semantic_chunker.py  spec_normalizer.py  vector_database.py
src/layers/layer2_rag/prompts/: __init__.py  spec_extraction.py
src/layers/layer3_cot/: __init__.py  confidence_calculator.py  cot_reasoning_engine.py  rag_retriever.py  report_generator.py  requirement_comparator.py
src/layers/layer3_cot/prompts/: __init__.py  verification.py
src/shared/: __init__.py  config.py  constants.py  logger.py
src/shared/utils/: __init__.py  json_utils.py  text_utils.py  validation.py
tests/: __init__.py  conftest.py
tests/unit/layers/: __init__.py  semantic_scorer.py  test_json_extractor.py  test_layer1_ast.py  test_layer2_rag.py  test_layer3_cot.py
